2014-05-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_set_node_of_window): Argument
	'remember' removed.  All callers updated.
	(begin_multiple_window_info_session): Don't call
	remember_window_and_node when tiling.

	* info/indices.c (do_info_index_search): Take FILE_BUFFER
	argument.  All callers updated.
	* info/info.c (main) <index search>: Don't set node of window before
	calling do_info_index_search.

2014-05-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_indices_of_file_buffer): Store return
	value in index_index.

2014-05-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (get_initial_file, add_initial_nodes)
	(show_error_node)
	* info/session.c (begin_multiple_window_info_session)
	(info_follow_menus): Use char * to store error message, and only
	build NODE if necessary.

	* info/info.c (info_find_matching_files): Declared static.

2014-05-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (begin_multiple_window_info_session): Call
	initialize_info_session and display startup message or error.  Caller
	updated.

2014-05-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_get_node_of_file_buffer): Order of arguments
	reversed.
	(info_node_of_file_buffer_tags): Merged into
	info_get_node_of_file_buffer.

	* info/session.c (initialize_info_session): Argument 'clear_screen'
	removed.

2014-05-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c (info_absolute_file, info_add_extension):
	Function renamed.
	(info_find_fullpath): Call info_add_extension.
	(filesys_read_info_file): Use finfo as an output parameter instead
	of an input parameter.

	* info/indices.c (info_indices_of_window): Unused function deleted.
	(index_entry_exists): Use FILE_BUFFER argument instead of WINDOW.

	* info/info.c (single_file, main, get_initial_file)
	(add_initial_nodes): single_file split between main and new functions.
	--node flag works without using --file.  Search in indices if